--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/index.css" />
     <script src="./js/resumeCreate.js"></script>
+    <link href="./assets/fontawesome/css/all.min.css" rel="stylesheet">
 </head>
 
 <body class="resume-page">
