--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         <div class="resume-search-filter" id="filterContainer"></div>
         <div class="resume-item" id="resumeItem"></div>
     </div>
-
+    <button id="logout">Logout</button>
 </body>
 <script src="./js/filterResume.js"></script>
 
